--- a/product-preview-card-component-main/app/style.css
+++ b/product-preview-card-component-main/app/style.css
@@ -9,7 +9,7 @@
 	--white: hsl(0, 0%, 100%);
 
 	/* Font Size */
-  	--font-size: 14px;
+  	--font-size: 0.875rem;
 
 	/* Font Weight */
 	--font-medium: 500;
@@ -54,7 +54,7 @@ a {
 }
 
 .title {
-	font-size: 32px;
+	font-size: 2rem;
 	font-weight: bold;
 	font-family: Fraunces, sans-serif;
 	line-height: 1.0;
@@ -69,9 +69,9 @@ a {
 
 .product-card {
 	background-color: var(--white);
-	max-width: 344px;
+	max-width: 21.5rem;
 	margin-bottom: 0.5rem;
-	border-radius: 12px;
+	border-radius: 0.75rem;
 }
 
 .image-container {
@@ -86,8 +86,8 @@ a {
   	left: 0;
   	width: 100%;
   	height: 100%;
-  	background: rgba(0, 0, 0, 0.1); /* Semi-transparent black overlay */
-	border-radius: 12px 12px 0 0;
+  	background: rgba(0, 0, 0, 0.1);
+	border-radius: 0.75rem 0.75rem 0 0;
   	z-index: 1;
 }
 
@@ -95,18 +95,18 @@ a {
 	display: block;
 	width: 100%;
 	height: 100%;
-	border-radius: 12px 12px 0 0;
+	border-radius: 0.75rem 0.75rem 0 0;
 }
 
 .product-details {
-	padding: 24px 26px;
-	gap: 14px;
+	padding: 1.5rem 1.625rem;
+	gap: 0.875rem;
 }
 
 .product-category {
 	line-height: 1.0;
 	text-transform: uppercase;
-	letter-spacing: 3px;
+	letter-spacing: 0.188rem;
 	color: var(--darkGrayishBlue);
 }
 
@@ -120,8 +120,8 @@ a {
 }
 
 .product-pricing {
-	margin-top: 8px;
-	gap: 18px;
+	margin-top: 0.5rem;
+	gap: 1.125rem;
 }
 
 .current-price {
@@ -129,18 +129,18 @@ a {
 }
 
 .original-price {
-	font-size: 12px;
+	font-size: 0.75rem;
 	line-height: 1.0;
 	color: var(--darkGrayishBlue);
 }
 
 .cart-btn {
 	width: 100%;
-	padding: 14px;
-	border-radius: 12px;
+	padding: 0.875rem;
+	border-radius: 0.75rem;
 
 	justify-content: center;
-	gap: 8px;
+	gap: 0.5rem;
 
 	background-color: var(--darkCyan);
 	color: var(--white);
@@ -167,28 +167,28 @@ a {
 
 @media (min-width: 620px) {
 	.product-card {
-		max-width: 600px;
+		max-width: 37.5rem;
 		display: flex;
 		margin-bottom: 1rem;
 	}
 
 	.product-image img {
-		border-radius: 12px 0 0 12px;
-		width: 300px;
+		border-radius: 0.75rem 0 0 0.75rem;
+		width: 18.75rem;
 		height: 100%;
 	}
 
 	.product-details {
-		padding: 32px;
-		gap: 22px;
+		padding: 2rem;
+		gap: 1.375rem;
 	}
 
 	.product-pricing {
-		gap: 20px;
+		gap: 1.25rem;
 	}
 
 	.cart-btn {
 		margin-top: auto;
-		padding: 16px;
+		padding: 1rem;
 	}
 }
