--- a/single-price-grid-component-master/app/style.css
+++ b/single-price-grid-component-master/app/style.css
@@ -95,7 +95,7 @@ main {
 	font-size: 0.875rem;
 	line-height: 1.8;
 	letter-spacing: -4%;
-	color: var(--lightGray);
+	color: var(--grayishBlue);
 }
 
 .card-subscription,
@@ -149,7 +149,7 @@ main {
 }
 
 .card-benefits {
-	background-color: var(--grayishBlue);
+	background-color: hsla(179, 62%, 43%, 0.8);
 	gap: 1.125rem;
 	border-bottom-left-radius: 0.375rem; 
 	border-bottom-right-radius: 0.375rem; 
