--- a/recipe-page-main/app/style.css
+++ b/recipe-page-main/app/style.css
@@ -103,6 +103,7 @@ ul li::before {
 .label {
 	color: var(--brown-800);
 	font-family: Young Serif, sans-serif;
+	font-weight: 400;
 	font-size: 1.75rem;
 	margin-bottom: 1rem;
 }
